<resources>
    <string name="app_name">ManejoServicioKotlin</string>
    <string name="creaserv">Servicio creado</string>
    <string name="finaserv">Servicio finalizado</string>
    <string name="iniserv">Servicio iniciado</string>
    <string name="botoIn">Iniciar</string>
    <string name="botoFin">Detener</string>
    <string name="tituloAct">Utilización de Servicios</string>
    <string name="repSon">Reproducir sonido</string>
    <string name="repCanc">Reproducir canción</string>
    <string name="selSound">Seleccionado Sonido</string>
    <string name="selSong">Seleccionada Canción</string>
    <string name="botoChooseSound">Obtener canción Reproductor Sistema</string>
    <string name="textChoosSong">Canción elegida:</string>
    <string name="PMarchaRP">Poner en marcha Reproductor propio</string>
    <string name="ObtCancionRP">Obtener cancion del Reproductor propio</string>
    <string name="app_not_installed">App not installed</string>

</resources>