<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tituloAct"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/rpSn"
            style="@style/MaterialAlertDialog.Material3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false"
            android:text="@string/repSon"
            tools:ignore="VisualLintButtonSize"></Button>

        <Button
            android:id="@+id/rpCn"
            style="@style/MaterialAlertDialog.Material3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repCanc"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnChoose"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="300dp"
        android:text="@string/botoChooseSound">

    </Button>

    <Button
        android:id="@+id/btnObtenerCancRP"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="300dp"
        android:text="@string/ObtCancionRP">

    </Button>

    <Button
        android:id="@+id/btnFin"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:textSize="19dp"
        android:layout_gravity="center"
        android:text="@string/botoFin">

    </Button>

    <Button
        android:id="@+id/btnPonerMarchaRP"
        style="@style/MaterialAlertDialog.Material3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:width="300dp"
        android:text="@string/PMarchaRP">

    </Button>

</LinearLayout>